fix: text overflow in composer, force https on no protocol

--- a/static/less/overrides.less
+++ b/static/less/overrides.less
@@ -6,6 +6,7 @@
 	.write-container {
 		display: block;
 		margin-bottom: 1.5rem;
+		min-width: 0px;	// fixes negation of overflow-wrap due this being a flex-item
 
 		textarea {
 			display: none;
